[package]
name = "robinhood-substreams"
version = "0.1.0"
edition = "2021"
description = "Robinhood Chain (eip155:4663) tokenized-stock scaled transfers"

[lib]
crate-type = ["cdylib"]

[dependencies]
substreams = "0.6"
substreams-ethereum = "0.10"
substreams-database-change = "2"
prost = "0.13"
hex-literal = "0.4"
num-bigint = "0.4"

[profile.release]
lto = true
opt-level = "s"
strip = "debuginfo"
